tests/snapshots/binds__bind_toggle_interactive_queries@001.snap
---
source: tests/binds.rs
description: "input: interactive\noptions: --bind ctrl-a:toggle-interactive -i --cmd true --query normal --cmd-query interactive"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/0                                                                        0/0"
"c> interactive                                                                  "
cursor: (24, 15)
