tests/snapshots/binds__bind_toggle_interactive_queries@003.snap
---
source: tests/binds.rs
description: "input: interactive\noptions: --bind ctrl-a:toggle-interactive -i --cmd true --query normal --cmd-query interactive\nafter:\n  @key Left\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/0                                                                        0/0"
"> norma|l                                                                       "
cursor: (24, 9)
