tests/snapshots/binds__bind_top_alias@002.snap
---
source: tests/binds.rs
description: "input: items [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\"]\noptions: --bind ctrl-t:top,ctrl-l:last\nafter:\n  @ctrl 'l'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> 10                                                                            "
"  9                                                                             "
"  8                                                                             "
"  7                                                                             "
"  6                                                                             "
"  5                                                                             "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"  1                                                                             "
"  10/10                                                                      9/0"
">                                                                               "
cursor: (24, 3)
